<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="all">

        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_action_toggle_star_grey"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/favorites" />

        <item
            android:id="@+id/categories"
            android:icon="@drawable/ic_action_action_book"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/categories" />
        <item
            android:id="@+id/tips"
            android:icon="@drawable/ic_action_image_wb_incandescent"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/tips" />

        <item
            android:id="@+id/diary"
            android:icon="@drawable/ic_action_action_today"
            android:title="@string/diary" />

        <item
            android:id="@+id/videorecipes"
            android:icon="@drawable/ic_menu_slideshow"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/video_recipe" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_action_action_settings"
            android:title="@string/action_settings" />
    </group>
    <item android:title="Información">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_action_action_info"
                android:title="@string/about" />

            <item
                android:id="@+id/contact"
                android:icon="@drawable/ic_action_communication_email"
                android:title="@string/contact" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>
</menu>
