<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jenjfood.jfood.Settings"
    tools:showIn="@layout/activity_settings"
    android:id="@+id/container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/NotificationsSwitchontainer">

        <TextView
            android:id="@+id/notificaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/settings_notifications"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground">

            <LinearLayout
                android:id="@+id/newsNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/notificaction">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_action_social_notifications_primary"
                    android:id="@+id/imageView2"
                    android:padding="10dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/news_notifications"
                    android:textSize="@dimen/setting_text"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@+id/imageView2"
                    android:layout_weight="0.90" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/NotificationsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:background="@drawable/ripple_flat_accent"
                    android:textColor="@color/colorPrimary"
                    android:clickable="true"
                    android:button="@null"
                    android:padding="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"

            android:text="@string/news_notifications_desc"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground">

            <LinearLayout
                android:id="@+id/diaryNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/notificaction">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_action_device_access_time_primary"
                    android:id="@+id/imageView3"
                    android:padding="10dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/diary_notifications"
                    android:textSize="@dimen/setting_text"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@+id/imageView2"
                    android:layout_weight="0.90" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/NotificationsSwitchDiary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:background="@drawable/ripple_flat_accent"
                    android:textColor="@color/colorPrimary"
                    android:clickable="true"
                    android:button="@null"
                    android:padding="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

            </LinearLayout>

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/diary_notifications_desc"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/SecondaryText"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:clickable="true"
        android:id="@+id/PrivacyContainer"
        android:layout_below="@+id/NotificationsSwitchontainer"
        android:background="?attr/selectableItemBackground">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/notificaction">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_action_av_my_library_books_primary"
                    android:id="@+id/iconsPrivacy"
                    android:padding="10dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/privacy_desc"
                    android:textSize="@dimen/setting_text"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@+id/imageView2"
                    android:layout_weight="0.90" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:clickable="true"
        android:id="@+id/ClearDataContainer"
        android:layout_below="@+id/PrivacyContainer"
        android:background="?attr/selectableItemBackground">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/celar_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/notificaction">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_action_action_delete"
                    android:id="@+id/iconsClear"
                    android:tint="@color/colorPrimary"
                    android:padding="10dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/clear_data"
                    android:textSize="@dimen/setting_text"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@+id/imageView2"
                    android:layout_weight="0.90" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
