<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.jenjfood.jfood.Diary">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64sp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardDescriptionDiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="2dp"
                    android:elevation="3dp"
                    android:visibility="visible"
                    app:cardBackgroundColor="@color/colorAccent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="24dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TitleCard"
                            android:text="Agenda"
                            android:textColor="@color/TextIcons"
                            android:id="@+id/titleDiary" />

                        <TextView
                            android:id="@+id/DiaryDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:textColor="@color/TextIcons"
                            android:text="@string/diary_desccription"
                            android:layout_below="@+id/titleDiary"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <RelativeLayout
                    android:id="@+id/setTimeContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:id="@+id/label_time_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_time_set"
                        android:textColor="@color/colorPrimary"
                        style="@style/Base.TextAppearance.AppCompat.Title"/>

                    <TextView
                        android:id="@+id/time_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12:40 Hrs."
                        style="@style/TextAppearance.AppCompat.SearchResult.Title"
                        android:layout_below="@+id/label_time_set"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/label_instructions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diary_instructions"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_below="@+id/time_set"/>

                    <Button
                        android:id="@+id/define_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diary_define_button"
                        android:background="@drawable/ripple_primary"
                        android:textColor="@color/TextIcons"
                        android:clickable="true"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_below="@+id/label_instructions"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentStart="true" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
